Fixed overflow issue for mobile and tablet screen sizes

--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,7 @@ header {
 }
 
 .banner {
+  overflow: hidden;
   img {
     width: 110%;
     position: relative;
